--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,13 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@env/*": ["src/environments/*"],
+      "@features/*": ["src/app/features/*"],
+      "@shared": ["src/app/shared"],
+      "@cdk/*": ["src/app/cdk/*"]
+    },
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
