--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install 💫
       run: npm ci
     - name: Build 🔧
-      run: npm run build
+      run: npm run build -- --base-href https://bcldvd.github.io/hackathon-bpi-2023/
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
