--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^15.1.0",
     "ag-grid-angular": "^29.0.0",
     "ag-grid-community": "^29.0.0",
+    "apexcharts": "^3.37.0",
+    "ng-apexcharts": "^1.7.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
